--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ highlighter:      rouge
 permalink:        pretty
 
 # Setup
-title:            '환영합니다.'
+title:            'Taekgu'
 # 자신의 blog title.
 tagline:          My Home(Mama)
 description:      '<a href="https://taekku.github.io" target="_blank">Taekku (new Windows)</a>'
@@ -22,7 +22,7 @@ url:              https://taekku.github.io
 # 또한 disqus(댓글시스템)를 이용하기 위해서도 필요.
 # 자신의 github page url을 입력
 # ( https://your_github_id.github.io 형식 )
-baseurl:          /
+baseurl:          
 
 author:           
   name:           Taekku
