--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ highlighter:      rouge
 permalink:        pretty
 
 # Setup
-title:            'Taekgu'
+title:            Good Mama
 # 자신의 blog title.
 tagline:          My Home(Mama)
 description:      '<a href="https://taekku.github.io" target="_blank">Taekku (new Windows)</a>'
