change site title

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ highlighter:      rouge
 permalink:        pretty
 
 # Setup
-title:            Mama
+title:            mama
 # 자신의 blog title.
 tagline:          My Home(Mama)
 description:      T.G. Lim
