--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ paginate:         5
 # Custom vars
 version:          0.0.1
 
-time:   2018 - 2019
+time:   2018
 
 github:
   repo:           https://github.com/taekku/taekku.github.io
