--- a/_config.yml
+++ b/_config.yml
@@ -36,9 +36,9 @@ paginate:         5
 # Custom vars
 version:          0.0.1
 
-time:   2018
+#time:   2018
 
 github:
   repo:           https://github.com/taekku/taekku.github.io
 
-theme: jekyll-theme-midnight
+#theme: jekyll-theme-midnight
