--- a/_config.yml
+++ b/_config.yml
@@ -41,4 +41,4 @@ version:          0.0.1
 github:
   repo:           https://github.com/taekku/taekku.github.io
 
-#theme: jekyll-theme-midnight
+theme: jekyll-theme-midnight
