--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ highlighter:      rouge
 permalink:        pretty
 
 # Setup
-title:            Taekgu's Homepage
+title:            Lim's Homepage
 # 자신의 blog title.
 tagline:          My Home(Mama)
-description:      T.G. Lim
+description:      Lim Taekgu
 # blog home에 표시될 blog에 대한 전반적인 설명.
 url:              https://taekku.github.io
 # Google Search Console에서 사용하는 sitemap.xml 생성시
