--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@ highlighter:      rouge
 permalink:        pretty
 
 # Setup
-title:            Lim's Homepage
+title:            마마!
 # 자신의 blog title.
 tagline:          My Home(Mama)
 description:      Lim Taekgu
-# blog home에 표시될 blog에 대한 전반적인 설명. 
+# blog home에 표시될 blog에 대한 전반적인 설명.
 url:              https://taekku.github.io
 # Google Search Console에서 사용하는 sitemap.xml 생성시
 # 이 url key값이 존재하지 않으면 sitemap.xml이
@@ -24,7 +24,7 @@ url:              https://taekku.github.io
 # ( https://your_github_id.github.io 형식 )
 baseurl:          /
 
-author:           
+author:
   name:           Taekku
   uri:            https://taekku.github.io
 
