--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ highlighter:      rouge
 permalink:        pretty
 
 # Setup
-title:            마마!
+title:            Maro Lim!
 # 자신의 blog title.
 tagline:          My Home(Mama)
 description:      Lim Taekgu
