--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ permalink:        pretty
 title:            Garam Maro!
 # 자신의 blog title.
 tagline:          My Home(Maro)
-description:      Lim Maro
+description:      Maro Project
 # blog home에 표시될 blog에 대한 전반적인 설명.
 url:              https://taekku.github.io
 # Google Search Console에서 사용하는 sitemap.xml 생성시
