작성법을 배우고 있음

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ highlighter:      rouge
 permalink:        pretty
 
 # Setup
-title:            Garam Maro!
+title:            MARO
 # 자신의 blog title.
 tagline:          My Home(Maro)
 description:      Maro Project
